samples/_failures_safe/1761328529_a569e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7de3068.c: In function ‘main’:
./samples/SAFE/__tmp_b7de3068.c:163:17: error: expected expression at end of input
  163 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_b7de3068.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7de3068.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7de3068.c:163:17: error: expected declaration or statement at end of input
